--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -207,48 +207,47 @@
                         <viewControllerLayoutGuide type="top" id="x14-3j-LRG"/>
                         <viewControllerLayoutGuide type="bottom" id="5fU-N5-qc0"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="S3W-QO-b3i">
+                    <view key="view" contentMode="scaleAspectFill" id="S3W-QO-b3i">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3iT-Te-5xR">
-                                <rect key="frame" x="1" y="93" width="600" height="351"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3iT-Te-5xR">
+                                <rect key="frame" x="0.0" y="0.0" width="610" height="606"/>
                                 <subviews>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4tn-1A-t8U" userLabel="Filter Bar Container View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="58"/>
+                                    <containerView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="4tn-1A-t8U" userLabel="Filter Bar Container View">
+                                        <rect key="frame" x="0.0" y="0.0" width="610" height="60"/>
                                         <connections>
                                             <segue destination="xpV-8M-bW3" kind="embed" identifier="goToFilterBar" id="6TU-wH-Xey"/>
                                         </connections>
                                     </containerView>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJK-a9-1m0" userLabel="Hotpot Container View">
-                                        <rect key="frame" x="0.0" y="58" width="600" height="52"/>
+                                    <containerView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJK-a9-1m0" userLabel="Hotpot Container View">
+                                        <rect key="frame" x="0.0" y="60" width="610" height="54"/>
                                         <connections>
                                             <segue destination="OnA-jk-5Hp" kind="embed" identifier="goToHotpot" id="Pnt-Hs-OYJ"/>
                                         </connections>
                                     </containerView>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CqB-g8-4PC">
-                                        <rect key="frame" x="0.0" y="110" width="600" height="241"/>
+                                    <containerView opaque="NO" contentMode="scaleAspectFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CqB-g8-4PC">
+                                        <rect key="frame" x="0.0" y="114" width="610" height="492"/>
                                         <connections>
                                             <segue destination="m7J-D3-eHA" kind="embed" identifier="goToSearchResults" id="okc-Lk-399"/>
                                         </connections>
                                     </containerView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="uJK-a9-1m0" firstAttribute="top" secondItem="3iT-Te-5xR" secondAttribute="top" constant="58" id="6pO-8V-aqi"/>
-                                    <constraint firstItem="CqB-g8-4PC" firstAttribute="top" secondItem="3iT-Te-5xR" secondAttribute="top" constant="110" id="v47-Vu-Fsh"/>
+                                    <constraint firstItem="CqB-g8-4PC" firstAttribute="top" secondItem="3iT-Te-5xR" secondAttribute="top" constant="114" id="TlG-SD-pgs"/>
+                                    <constraint firstItem="uJK-a9-1m0" firstAttribute="top" secondItem="3iT-Te-5xR" secondAttribute="top" constant="60" id="XxF-hf-KTb"/>
                                 </constraints>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.4039215686" green="0.58823529409999997" blue="0.01176470588" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="3iT-Te-5xR" secondAttribute="trailing" constant="-21" id="C8n-P4-Vrn"/>
-                            <constraint firstItem="5fU-N5-qc0" firstAttribute="top" secondItem="3iT-Te-5xR" secondAttribute="bottom" constant="156" id="Ija-ws-4Jv"/>
-                            <constraint firstItem="3iT-Te-5xR" firstAttribute="top" secondItem="x14-3j-LRG" secondAttribute="bottom" constant="93" id="Mod-Y4-V5b"/>
-                            <constraint firstItem="3iT-Te-5xR" firstAttribute="leading" secondItem="S3W-QO-b3i" secondAttribute="leadingMargin" constant="-19" id="eQC-Ts-9Y0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3iT-Te-5xR" secondAttribute="trailing" constant="-30" id="UQp-XO-CJh"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="3iT-Te-5xR" secondAttribute="bottom" constant="-6" id="Urz-yz-sR5"/>
+                            <constraint firstItem="3iT-Te-5xR" firstAttribute="top" secondItem="x14-3j-LRG" secondAttribute="bottom" id="bnO-oq-2Iw"/>
+                            <constraint firstItem="3iT-Te-5xR" firstAttribute="leading" secondItem="S3W-QO-b3i" secondAttribute="leading" id="kb1-ML-hKH"/>
                         </constraints>
                     </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="600"/>
                     <connections>
                         <outlet property="filterBarContainer" destination="4tn-1A-t8U" id="gKE-le-RWh"/>
                         <outlet property="hotpotContainer" destination="uJK-a9-1m0" id="iRs-v1-JGM"/>
@@ -272,7 +271,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnu-aU-Idl">
-                                <rect key="frame" x="20" y="26" width="560" height="219.5"/>
+                                <rect key="frame" x="20" y="26" width="560" height="219"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flavor Finder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ob-z9-dlN">
                                         <rect key="frame" x="84" y="0.0" width="392" height="20"/>
@@ -284,14 +283,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FFIcon" translatesAutoresizingMaskIntoConstraints="NO" id="D36-Am-aeg">
-                                        <rect key="frame" x="220" y="29.5" width="120" height="120"/>
+                                        <rect key="frame" x="220" y="29" width="120" height="120"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="hhl-zn-6R8"/>
                                             <constraint firstAttribute="height" constant="120" id="qo0-t5-cEj"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a search to begin:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="ype-6a-YWK">
-                                        <rect key="frame" x="28" y="151.5" width="504" height="16"/>
+                                        <rect key="frame" x="28" y="151" width="504" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="16" id="lwa-sv-QBU"/>
                                         </constraints>
@@ -300,7 +299,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <searchBar contentMode="redraw" text="" placeholder="What ingredient would you like to look up?" translatesAutoresizingMaskIntoConstraints="NO" id="LPe-X5-35t">
-                                        <rect key="frame" x="14" y="179.5" width="532" height="40"/>
+                                        <rect key="frame" x="14" y="179" width="532" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="hs9-Da-RRs"/>
                                         </constraints>
@@ -332,7 +331,7 @@
                                         <rect key="frame" x="0.0" y="28" width="504" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dae-TM-rqk" id="GGP-G0-0l0">
-                                            <rect key="frame" x="0.0" y="0.0" width="504" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="504" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -487,7 +486,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hOM-h3-clb" id="haU-Wm-fie">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -1006,15 +1005,15 @@
             <objects>
                 <viewController id="m7J-D3-eHA" userLabel="Search Results Subview Controller" customClass="SearchResultsSubviewController" customModule="FlavorFinder" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="DLA-eN-E9Q">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="241"/>
+                        <rect key="frame" x="0.0" y="0.0" width="610" height="492"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MatchTableViewCell" id="Gkg-pY-SVs" customClass="MatchTableViewCell" customModule="FlavorFinder">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="610" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gkg-pY-SVs" id="OAA-3p-knm">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="610" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6C-9l-aN2" userLabel="Name Label">
@@ -1048,7 +1047,7 @@
                         <viewControllerLayoutGuide type="bottom" id="ESf-fa-pI8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xtQ-Se-m8P">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="58"/>
+                        <rect key="frame" x="0.0" y="0.0" width="610" height="60"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -1062,7 +1061,7 @@
             <objects>
                 <viewController id="OnA-jk-5Hp" userLabel="Hotpot Subview Controller" customClass="HotpotSubviewController" customModule="FlavorFinder" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ut0-hT-yBs" userLabel="Hotpot Collection View">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="52"/>
+                        <rect key="frame" x="0.0" y="0.0" width="610" height="54"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="17j-j0-BNI">
                             <size key="itemSize" width="50" height="50"/>
